feature: add bot_promp params
Displays an option to add a bot as a friend during login.

--- a/example/index.pug
+++ b/example/index.pug
@@ -12,5 +12,5 @@ html
       p Provider: #{user.provider}
       p ID: #{user.id}
       p Pictrue:
-        img(src=user._json.pictureUrl width="100px")
+        img(src=user.pictureUrl width="100px")
 
