--- a/example/index.pug
+++ b/example/index.pug
@@ -11,6 +11,7 @@ html
       h2 View your profile
       p Provider: #{user.provider}
       p ID: #{user.id}
+      p Email: #{user.email || '---'}
       p Pictrue:
         img(src=user.pictureUrl width="100px")
 
